--- a/package.json
+++ b/package.json
@@ -9,17 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-toggle": "^1.1.0",
     "@tabler/icons-react": "^3.7.0",
+    "@tiptap/extension-highlight": "^2.4.0",
+    "@tiptap/extension-image": "2.4.0",
+    "@tiptap/extension-link": "^2.4.0",
+    "@tiptap/extension-placeholder": "^2.4.0",
+    "@tiptap/extension-subscript": "^2.4.0",
+    "@tiptap/extension-superscript": "^2.4.0",
+    "@tiptap/extension-text-align": "^2.4.0",
+    "@tiptap/extension-underline": "^2.4.0",
     "@tiptap/pm": "^2.4.0",
     "@tiptap/react": "^2.4.0",
     "@tiptap/starter-kit": "^2.4.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
+    "lucide-react": "^0.408.0",
     "next": "14.2.4",
+    "next-safe-action": "^7.1.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
+    "xss": "^1.0.15",
     "zod": "^3.23.8"
   },
   "devDependencies": {
